Fixed low contrast issue on home page

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ nav {
 }
 
 #connections {
-	color: grey;
+	color: #666666ff;
 	margin-top: 16px;
 	font-weight: normal;
 }
